--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:padding="8dp"
-    tools:context=".activities.SignupActivity">
+    tools:context=".activities.SignupActivity"
+    android:background="@color/backgroundColor">
 
 
     <EditText
@@ -14,7 +15,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:hint="Username" />
+        android:hint="Username"
+
+        android:textColor="@color/textColor"
+        android:textColorHint="#A8A8A8"
+        android:background="#454545"
+        android:padding="8dp"/>
 
     <EditText
         android:id="@+id/tvPassword"
@@ -23,7 +29,11 @@
         android:layout_weight="1"
         android:hint="Password"
         android:layout_below="@id/tvUsername"
-        android:inputType="textPassword"/>
+        android:inputType="textPassword"
+        android:textColor="@color/textColor"
+        android:textColorHint="#A8A8A8"
+        android:background="#454545"
+        android:padding="8dp"/>
 
     <EditText
         android:id="@+id/tvConfirm"
@@ -32,28 +42,38 @@
         android:layout_weight="1"
         android:hint="Confirm password"
         android:layout_below="@id/tvPassword"
-        android:inputType="textPassword"/>
+        android:inputType="textPassword"
+        android:textColor="@color/textColor"
+        android:textColorHint="#A8A8A8"
+        android:background="#454545"
+        android:padding="8dp"/>
     <EditText
         android:id="@+id/tvEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:hint="Email"
-        android:layout_below="@id/tvConfirm"/>
+        android:layout_below="@id/tvConfirm"
+        android:textColor="@color/textColor"
+        android:textColorHint="#A8A8A8"
+        android:background="#454545"
+        android:padding="8dp"/>
     <Button
     android:id="@+id/btnPicture"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:text="Take profile picture"
-    android:layout_below="@id/tvEmail"/>
+    android:layout_below="@id/tvEmail"
+        android:textColor="@color/backgroundColor"/>
     <Button
         android:id="@+id/btnGallery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Choose profile picture"
-        android:layout_below="@id/btnPicture"/>
+        android:layout_below="@id/btnPicture"
+        android:textColor="@color/backgroundColor"/>
 
     <ImageView
         android:id="@+id/ivPreview"
@@ -69,6 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/create"
-        android:layout_below="@id/ivPreview"/>
+        android:layout_below="@id/ivPreview"
+        android:textColor="@color/backgroundColor"/>
 
 </RelativeLayout>
