--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -7,17 +7,17 @@
         android:icon="@drawable/ic_baseline_home_24"
         android:title="Home"
         app:showAsAction="always"
-        android:iconTint="@color/black"/>
+        android:iconTint="@color/textColor"/>
     <item
         android:id="@+id/action_compose"
         android:icon="@drawable/ic_baseline_add_circle_24"
         android:title="Compose"
         app:showAsAction="always"
-        android:iconTint="@color/black"/>
+        android:iconTint="@color/textColor"/>
     <item
         android:id="@+id/action_profile"
         android:icon="@drawable/ic_baseline_person_24"
-        android:iconTint="@color/black"
+        android:iconTint="@color/textColor"
         android:title="Profile"
         app:showAsAction="always" />
 </menu>
