--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="black">#000000</color>
 
+    <!-- Dark Mode Colors-->
+    <color name="textColor">#FFFFFF</color>
+    <color name="backgroundColor">#303030</color>
+
 </resources>
