--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <style name="AppTheme" parent="Theme.MaterialComponents.Light">
         <!-- Customize your theme here. -->
 
-        <item name="colorPrimary">#FFA97A</item>
-        <item name="colorPrimaryDark">#000000</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#49B3A6</item>
+        <item name="colorPrimaryDark">#515151</item>
+        <item name="colorAccent">#00FFE2</item>
 
     </style>
 </resources>
