--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:hint="Username"
+        android:hint="@string/username"
 
         android:textColor="@color/textColor"
         android:textColorHint="#A8A8A8"
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:hint="Password"
+        android:hint="@string/password"
         android:layout_below="@id/tvUsername"
         android:inputType="textPassword"
         android:textColor="@color/textColor"
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:hint="Confirm password"
+        android:hint="@string/confirmpass"
         android:layout_below="@id/tvPassword"
         android:inputType="textPassword"
         android:textColor="@color/textColor"
@@ -52,28 +52,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:hint="Email"
+        android:hint="@string/email"
         android:layout_below="@id/tvConfirm"
         android:textColor="@color/textColor"
         android:textColorHint="#A8A8A8"
         android:background="#454545"
         android:padding="8dp"/>
+
     <Button
-    android:id="@+id/btnPicture"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:text="Take profile picture"
-    android:layout_below="@id/tvEmail"
-        android:textColor="@color/backgroundColor"/>
+        android:id="@+id/btnPicture"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvEmail"
+        android:layout_weight="1"
+        android:drawableLeft="@drawable/ic_baseline_camera_alt_24"
+        android:text="@string/camera"
+        android:textColor="@color/backgroundColor" />
+
     <Button
         android:id="@+id/btnGallery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Choose profile picture"
         android:layout_below="@id/btnPicture"
-        android:textColor="@color/backgroundColor"/>
+        android:layout_weight="1"
+        android:drawableLeft="@drawable/ic_baseline_photo_library_24"
+        android:text="@string/gallery"
+        android:textColor="@color/backgroundColor" />
 
     <ImageView
         android:id="@+id/ivPreview"
@@ -83,13 +87,15 @@
         android:layout_centerHorizontal="true"
         android:padding="8dp"
         android:layout_below="@id/btnGallery"/>
+
     <Button
         android:id="@+id/btnCreateAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/create"
         android:layout_below="@id/ivPreview"
-        android:textColor="@color/backgroundColor"/>
+        android:layout_weight="1"
+        android:drawableLeft="@drawable/ic_baseline_directions_bike_24"
+        android:text="@string/create"
+        android:textColor="@color/backgroundColor" />
 
 </RelativeLayout>
