--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -5,19 +5,19 @@
     <item
         android:id="@+id/action_home"
         android:icon="@drawable/ic_baseline_home_24"
-        android:title="Home"
+        android:title="@string/home"
         app:showAsAction="always"
         android:iconTint="@color/textColor"/>
     <item
         android:id="@+id/action_compose"
         android:icon="@drawable/ic_baseline_add_circle_24"
-        android:title="Compose"
+        android:title="@string/compose"
         app:showAsAction="always"
         android:iconTint="@color/textColor"/>
     <item
         android:id="@+id/action_profile"
         android:icon="@drawable/ic_baseline_person_24"
         android:iconTint="@color/textColor"
-        android:title="Profile"
+        android:title="@string/profile"
         app:showAsAction="always" />
 </menu>
